feat(rails/example) add create comment api
